# splitzies-functions

./: .gitignore  .pre-commit-config.yaml  generate_sheet.py  generate_sheets.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
