[tool.poetry]
name = "splitzies-functions"
version = "0.1.1"
description = "Provides API for parsing receipts"
authors = ["Navbryce <plunkett.bryce.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
insta_receipt = {git = "https://github.com/Navbryce/insta-receipt", branch = "main"}
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
